# thunderfish

./: .coveragerc  .coveralls.yml  .gitignore  .mkdocs.yml  .travis.yml  404.html  README.md  build-docs.sh  index.html  pitchdetection.md  pulseplots.py  purgefiles.sh  pyproject.toml  readme.txt  requirements.txt  search.html  setup.py
1st_version_thunderfish/: Auxiliary.py  FishRecording.py  PreProcessors.py  thunderFish.py
FishTracker/: process_fishes.py  tracker.py
api/: bestwindow.html  checkpulse.html  chirp.html  collectfish.html  configfile.html  consistentfishes.html  consoleinput.html  convertdata.html  dataloader.html  datawriter.html  efield.html  eodanalysis.html  eodexplorer.html  eventdetection.html  fakefish.html  fishfinder.html  fishshapes.html  harmonics.html  hopkinsloader.html  index.html  multivariateexplorer.html  powerspectrum.html  pulseplots.html  pulses.html  pulsetracker.html  tabledata.html  thunderbrowse.html  thunderfish.html  thunderlogger.html  version.html  voronoi.html
code/: FishTracker.py  create_plots2.py  harmonic_tools.py  thunderfish.py  till_juan_fishfinder.py
collectfish/: index.html
cover/: class_index.html  d_8167c4e91a71789c___init___py.html  d_8167c4e91a71789c_bestwindow_py.html  d_8167c4e91a71789c_configfile_py.html  d_8167c4e91a71789c_consoleinput_py.html  d_8167c4e91a71789c_convertdata_py.html  d_8167c4e91a71789c_dataloader_py.html  d_8167c4e91a71789c_datawriter_py.html  d_8167c4e91a71789c_eodanalysis_py.html  d_8167c4e91a71789c_eventdetection_py.html  d_8167c4e91a71789c_fakefish_py.html  d_8167c4e91a71789c_fishshapes_py.html  d_8167c4e91a71789c_harmonics_py.html  d_8167c4e91a71789c_powerspectrum_py.html  d_8167c4e91a71789c_tabledata_py.html  d_8167c4e91a71789c_version_py.html  d_8167c4e91a71789c_voronoi_py.html  function_index.html  index.html  status.json  z_bbf95fe1437c662b___init___py.html  z_bbf95fe1437c662b_audianthunder_py.html  z_bbf95fe1437c662b_bestwindow_py.html  z_bbf95fe1437c662b_checkpulse_py.html  z_bbf95fe1437c662b_chirp_py.html  z_bbf95fe1437c662b_collectfish_py.html  z_bbf95fe1437c662b_efield_py.html  (+17 more)
(+198 files in other folders)
